--- a/deploy/class.yaml
+++ b/deploy/class.yaml
@@ -5,3 +5,4 @@ metadata:
 provisioner: k8s-sigs.io/nfs-subdir-external-provisioner # or choose another name, must match deployment's env PROVISIONER_NAME'
 parameters:
   archiveOnDelete: "false"
+  gid: "5555"
